--- a/style.css
+++ b/style.css
@@ -17,10 +17,32 @@ body {
   background-color: #f9fbfd;
 }
 
+.background{
+  width: 100%;
+  height: 100vh;
+  position: relative;
+} 
+
+.img {
+  width: 100%;
+  height: 100%;
+  background-size: cover;
+  background-position: center;
+  object-fit: cover;
+}
+
 .wrapper {
   padding-top: 30px;
   padding-left: 20px;
   padding-right: 20px;
+  position: absolute;
+  transform: translate(-50%, -50%);
+  top: 60%;
+  left: 50%;
+}
+
+h1{
+  color: white;
 }
 
 header {
